# meta-hackathon

./: Dockerfile  README.md  app.py  desktop.ini  inference.py  openenv.yaml  pyproject.toml  requirements.txt  test_env.py
env/: environment.py  grader.py  models.py  scenario_gen.py
server/: app.py
tasks/: easy.py  hard.py  medium.py
