[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "incident-response-env"
version = "1.0.0"
description = "OpenEnv environment for production incident response"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn==0.29.0",
    "pydantic==2.7.1",
    "openai==1.30.1",
    "python-dotenv==1.0.1",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "app:app"